added company photo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>FLW1 Class Portfolio</title>
+  <title>FLW1 Student Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -18,12 +18,12 @@
   </div>
   </br>
   <h1 class="header">
-    Welcome to Code Nation Fellowship I at [Company Name]!
+    Welcome to Code Nation Fellowship I at Flatiron Health!
   </h1>
   </br>
   <div class="companies">
     <img src="/images/Code%20Nation%20-%20First%20Step%20-%20Yellow.gif">
-    <img src="/images/Image%20-%20Company%20Logo%20Placeholder.png">
+    <img src="/images/FlatironLogo.png">
   </div>
   </br>
   <p>Link to Agenda</p>
